--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "split-type": "^0.3.4"
   },
   "devDependencies": {
