--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
     "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.2.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not IE 11",
+    "not dead"
+  ]
 }
