--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fancyapps/ui": "^5.0.36",
     "@gsap/react": "^2.1.2",
     "gsap": "^3.12.7",
+    "hls.js": "^1.6.2",
     "lenis": "^1.2.3",
     "next": "15.2.4",
     "react": "^19.0.0",
