--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fancyapps/ui": "^5.0.36",
     "@gsap/react": "^2.1.2",
+    "@vercel/analytics": "^1.5.0",
     "gsap": "^3.12.7",
     "hls.js": "^1.6.2",
     "lenis": "^1.2.3",
