new vercel.json 3

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "headers": [
     {
-      "source": "/_vercel/insights/script.js",
+      "source": "/_vercel/insights/script\\.js",
       "headers": [
+        {
+          "key": "Vercel-CDN-Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        },
+        {
+          "key": "CDN-Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        },
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
