--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fancyapps/ui": "^5.0.36",
     "@gsap/react": "^2.1.2",
     "gsap": "^3.13.0",
+    "leaflet": "^1.9.4",
     "lenis": "^1.2.3",
     "next": "15.2.4",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0",
     "swiper": "^11.2.6",
     "zod": "^4.0.5"
   },
